# react-native-auditor

./: .gitignore  Cargo.toml  README.md  react-native-auditor-product-brief.md
.github/workflows/: ci.yml  release-binaries.yml
crates/rn-auditor/: Cargo.toml
crates/rn-auditor/src/: eas_json.rs  issue.rs  main.rs  quality_gate.rs  reporter.rs  scanner.rs
crates/rn-auditor/src/parsers/: app_json.rs  eas_json.rs  mod.rs  package_json.rs
crates/rn-auditor/src/reporters/: html.rs  json.rs  mod.rs  terminal.rs
crates/rn-auditor/src/rules/: app_config.rs  eas.rs  env.rs  expo_release.rs  lockfiles.rs  mod.rs  reanimated.rs
crates/rn-auditor/tests/: cli_audit.rs
docs/: ROADMAP.md
examples/reports/: sample-report.json
npm/react-native-auditor/: README.md  package.json
npm/react-native-auditor/scripts/: check-package.js  prepare-artifact-binaries.js  prepare-local-binary.js
