[package]
name = "react-native-auditor"
version = "0.1.1"
edition = "2021"
description = "A local-first React Native & Expo project auditor for release readiness, dependency health, and risk reports."
license = "MIT"
repository = "https://github.com/twinedo/react-native-auditor"

[[bin]]
name = "rn-auditor"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
